Dragging folder over itself should not open it
Affected version
- Nightly flatpak: Yes
- Other: ArchLinux
Steps to reproduce
I've found 3 distinct but related behaviors.
Still repros on nightly:
- Hold mouse on a folder, move a little, wait. Folder opens.
The following two variants aren't producible on nightly, but I can't find an obvious issue/commit for them, so I'm including them as context in case there's something to learn.
- Drag a folder onto itself without any pause. Folder will open after releasing drag.
- Drag an archive onto itself. Get an error about adding an archive to itself. (actually, in nightly, the feature to drag onto archives seems completely disabled, but I don't see an obvious commit, so I wonder if this was accidental)
Current behavior
Files thinks I'm trying to move the folder within itself, or add an archive to itself.
Expected behavior
Nothing should happen, which is what happened on version 42. I guess there could be a use case for moving a folder under itself if there's symlinks, but this doesn't feel like a use case to optimize for.
Generally, I trigger this behavior accidentally/undesirably if
- I start a drag and pause a bit to figure out where I'm dragging
- I want to cancel a drag